--- a/demo/前端面试/H5与css面试/layout.html
+++ b/demo/前端面试/H5与css面试/layout.html
@@ -19,7 +19,7 @@
             padding-right: 190px;
         }
         /* 清除浮动 */
-        .container::after {   
+        .container:after {   
             content: '';
             width: 0;
             height: 0;
