--- a/demo/test.html
+++ b/demo/test.html
@@ -13,7 +13,7 @@
     <div></div>
     <div></div>
     <script>
-        var  divs = document.getElementsByTagName("div");
+        var  divs = document.getElementsByTagName("div");  //动态集合
         console.log(divs.length);       //5
         document.body.appendChild(document.createElement("div"));
         console.log(divs.length);       //6
