--- a/demo/前端面试/H5与css面试/test.html
+++ b/demo/前端面试/H5与css面试/test.html
@@ -24,5 +24,10 @@
    
     <div class="float"></div>
     <div class="no"></div>
+    <script>
+        /**
+         * 对自己认知的改变。。。 float还是很多东西
+        */
+    </script>
 </body>
 </html>
