--- a/demo/test.html
+++ b/demo/test.html
@@ -7,16 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <ol>
+        <li>wangyi</li>
+        <li>163.com</li>
+    </ol>
     <script>
-        var  divs = document.getElementsByTagName("div");
-        console.log(divs.length);       //5
-        document.body.appendChild(document.createElement("div"));
-        console.log(divs.length);       //6
+      
     </script>
 </body>
 </html>
